Added product availability
