# src/controllers/products.js
@@ -29,3 +29,29 @@ exports.updateRating = (req, res) => {
 
   return res.status(200).json(findedProduct);  
 };
+
+exports.updateAvailability = (req, res) => {
+  /*
+    #swagger.parameters['obj'] = {
+      in: 'body',
+      description: 'Change product availability',
+      schema: {
+          $availability: true,
+      }
+    } 
+  */
+  const { id } = req.params;
+  const findedProduct = products.find(product => product.id === id);
+
+  if (!findedProduct) {
+    return res.status(404).json();
+  }
+
+  if (typeof req.body.availability !== 'boolean') {
+    return res.status(400).json();
+  }
+
+  findedProduct.availability = req.body.availability;
+
+  return res.status(200).json(findedProduct);  
+};
